[package]
name = "connectify"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["rt", "macros", "sync", "time", "net"] }
futures-util = { version = "0.3.31", default-features = false, features = ["io", "sink"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect"] }
tungstenite = { version = "0.26.2", default-features = false, features = ["handshake"] }
http = { version = "1.3.1", default-features = false }
url = { version = "2.5.4", default-features = false }

[lib]
path = "src/lib.rs"